# Quill

./: .env.example  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  compass.yml  pyproject.toml
.github/workflows/: lint.yml  test.yml
src/quill/: __init__.py  analyzer.py  cache.py  cli.py  output.py  progress.py  prompts.py  reader.py  roles.py  tracing.py
tests/: conftest.py  test_analyzer.py  test_attribution_integration.py  test_cli.py  test_cli_attribution.py  test_openai_instrumentation.py  test_output.py  test_parallel.py  test_progress.py  test_prompts.py  test_reader.py  test_roles.py  test_tracing.py  test_tracing_attribution.py
tests/fixtures/: ATTRIBUTIONS.md
tests/fixtures/services-agreement/: orrick-consulting.md
