[project]
name = "quill"
version = "0.1.0"
description = "AI-powered legal document analyzer with multi-model routing and OpenTelemetry instrumentation"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "anthropic>=0.52",
    "pymupdf>=1.25",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-http>=1.20",
    "opentelemetry-instrumentation-anthropic>=0.1",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
]

[project.scripts]
quill = "quill.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/quill"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
